--- a/less/style.less
+++ b/less/style.less
@@ -1,7 +1,20 @@
-
-	.line {
-	top: 20rem;
-	height: 10px;
-	width: 100%;
-	color: #000;
+body {
+	margin: 0;
+	padding: 0;
 }
+.header {
+	.top-line {
+		display: flex;
+		margin-top: 21px;
+		margin-left: 13%;
+		width: 68%;
+		.line {
+			display: flex;
+			width: 100%;
+			height: 1px;
+			margin-left: 8%;
+			background: #000;
+		}
+	}
+}
+
