--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,89 @@ body {
   margin: 0;
   padding: 0;
 }
-.header .top-line {
+.top-line {
   display: flex;
   margin-top: 21px;
   margin-left: 13%;
   width: 68%;
 }
-.header .top-line .line {
+.top-line .line {
   display: flex;
   width: 100%;
   height: 1px;
   margin-left: 8%;
   background: #000;
+}
+.header {
+  display: flex;
+  flex-direction: column;
+}
+.header-top {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 20%;
+  width: 60%;
+}
+.header .phone {
+  line-height: 0;
+  box-sizing: border-box;
+}
+.header .logo {
+  margin-top: -10px;
+  box-sizing: border-box;
+}
+.header .logo img {
+  width: 82%;
+}
+.header .btn-group .btn {
+  box-sizing: border-box;
+  padding: 5px 20px;
+  background: transparent;
+  outline: none;
+  border: 1px solid #000;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: 600;
+  transition: 0.5s;
+}
+.header .btn-group .btn:hover {
+  background: #d0aa8c;
+  color: #fff;
+  border: 1px solid #d0aa8c;
+}
+.header .menu {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 50px;
+  align-items: center;
+  background: #302d35;
+  margin-top: 10px;
+}
+.header .menu ul {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  margin-left: 20%;
+  width: 60%;
+}
+.header .menu ul li {
+  list-style: none;
+}
+.header .menu ul li a {
+  display: block;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 3px 30px;
+  font-size: 15px;
+  border-right: 1px solid #fff;
+}
+.header .menu ul li a:last-child {
+  border: none;
 }
