--- a/less/style.less
+++ b/less/style.less
@@ -2,19 +2,92 @@ body {
 	margin: 0;
 	padding: 0;
 }
-.header {
-	.top-line {
+.top-line {
+	display: flex;
+	margin-top: 21px;
+	margin-left: 13%;
+	width: 68%;
+	.line {
 		display: flex;
-		margin-top: 21px;
-		margin-left: 13%;
-		width: 68%;
-		.line {
+		width: 100%;
+		height: 1px;
+		margin-left: 8%;
+		background: #000;
+	}
+}
+.header {
+	display: flex;
+	flex-direction: column;
+	&-top {
+		display: inline-flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+		margin-left: 20%;
+		width: 60%;
+	}
+	.phone {
+		line-height: 0;
+		box-sizing: border-box;
+	}
+	.logo {
+		margin-top: -10px;
+		box-sizing: border-box;
+		img {
+			width: 82%;
+		}
+	}
+	.btn-group {
+		.btn {
+		box-sizing: border-box;
+		padding: 5px 20px;
+		background: transparent;
+		outline: none;
+		border: 1px solid #000;
+		text-transform: uppercase;
+		cursor: pointer;
+		font-size: 12px;
+		font-weight: 600;
+		transition: 0.5s;
+		&:hover {
+			background: #d0aa8c;
+			color: #fff;
+			border: 1px solid #d0aa8c; 
+		}
+		}	
+}
+	.menu {
+		display: flex;
+		justify-content: space-between;
+		width: 100%;
+		height: 50px;
+		align-items: center;
+		background: #302d35;
+		margin-top: 10px;
+		ul {
 			display: flex;
-			width: 100%;
-			height: 1px;
-			margin-left: 8%;
-			background: #000;
+			justify-content: space-between;
+			margin: 0;
+			padding: 0;
+			margin-left: 20%;
+			text-align: center;
+			margin-left: 20%;
+			width: 60%;
+			li {
+				list-style: none;
+				a {
+					display: block;
+					color: #fff;
+					text-decoration: none;
+					text-transform: uppercase;
+					padding: 3px 30px;
+					font-size: 15px;
+					border-right: 1px solid #fff;
+					&:last-child {
+						border: none;
+					}
+				}
+			}
 		}
 	}
 }
-
