--- a/less/style.less
+++ b/less/style.less
@@ -1,3 +1,20 @@
+/*colors*/
+@line: #000; /*верхние линии*/
+@btn-color: #d0aa8c; /*ховер кнопок*/
+@nav-bar: #302d35; /*меню*/
+@light: #fff;
+
+/*fonts family*/
+@font-face {
+	font-family: 'Montserrat', sans-serif;
+	src: url(../fonts/Montserrat-Medium.ttf);
+}
+
+@font-face {
+	font-family: 'Romul';
+	src: url(../fonts/Romul.ttf);
+}
+
 body {
 	margin: 0;
 	padding: 0;
@@ -12,7 +29,7 @@ body {
 		width: 100%;
 		height: 1px;
 		margin-left: 8%;
-		background: #000;
+		background: @line;
 	}
 }
 .header {
@@ -34,25 +51,27 @@ body {
 		margin-top: -10px;
 		box-sizing: border-box;
 		img {
+			margin-left: 5%;
 			width: 82%;
 		}
 	}
 	.btn-group {
-		.btn {
+		.button {
 		box-sizing: border-box;
-		padding: 5px 20px;
+		padding: 5px 30px;
+		margin-left: 10px;
 		background: transparent;
 		outline: none;
-		border: 1px solid #000;
+		border: 1px solid @line;
 		text-transform: uppercase;
 		cursor: pointer;
 		font-size: 12px;
 		font-weight: 600;
 		transition: 0.5s;
 		&:hover {
-			background: #d0aa8c;
+			background: @btn-color;
 			color: #fff;
-			border: 1px solid #d0aa8c; 
+			border: 1px solid @btn-color; 
 		}
 		}	
 }
@@ -62,8 +81,8 @@ body {
 		width: 100%;
 		height: 50px;
 		align-items: center;
-		background: #302d35;
-		margin-top: 10px;
+		background: @nav-bar;
+		margin-top: 15px;
 		ul {
 			display: flex;
 			justify-content: space-between;
@@ -75,19 +94,197 @@ body {
 			width: 60%;
 			li {
 				list-style: none;
+				border-right: 1px solid @light;
 				a {
 					display: block;
-					color: #fff;
+					color: @light;
 					text-decoration: none;
 					text-transform: uppercase;
-					padding: 3px 30px;
-					font-size: 15px;
-					border-right: 1px solid #fff;
-					&:last-child {
-						border: none;
-					}
+					padding-right: 50px;
+					font-size: 12px;
+					font-family: 'Romul';
+				}
+				&:last-child {
+					border-right: none;
 				}
 			}
 		}
 	}
+}
+/*конец меню*/
+
+/*текст*/
+.block-text {
+	margin-top: 45px;
+	h1 {
+		text-transform: uppercase;
+		font-family: 'Montserrat', sans-serif;
+		font-size: 15px;
+		font-weight: 400;
+	}
+	h2 {
+		font-family: 'Romul';
+		font-size: 30px;
+		font-weight: 400;
+		&::before {
+			content: '';
+			position: absolute;
+			height: 1px;
+			width: 65px;
+			background: @btn-color;
+			transform: translate(-120%, 15px);
+		}
+		&::after {
+			content: '';
+			position: absolute;
+			height: 1px;
+			width: 65px;
+			background: @btn-color;
+			transform: translate(23%, 15px);
+		}
+	}
+	p {
+		font-size: 12px;
+		font-weight: 600;
+	}
+}
+
+/*контент*/
+.row {
+	.col-md-6 {
+		.header-text {
+			.line {
+				background: @btn-color;
+				margin-left: auto;
+				margin-right: auto;
+				margin-top: 25px;
+				margin-bottom: 25px;
+				height: 1px;
+				max-width: 90px;
+			}
+		}
+		.button-content {
+			box-sizing: border-box;
+			padding: 5px 30px;
+			border: 2px solid @nav-bar;
+			text-transform: uppercase;
+			width: 50%;
+			background: transparent;
+			cursor: pointer;
+			font-weight: 400;
+			margin-bottom: 30px;
+		}
+	}
+}
+
+/*подвал*/
+
+.foot-cont {
+	background: url(/img/bg.png) no-repeat;
+	background-size: 100% auto;
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	margin-bottom: 100px;
+	.cont-item {
+		display: flex;
+		flex-direction: column;
+		width: 16%;
+		justify-content: flex-start;
+		margin-top: 30px;
+		&:first-child {
+			margin-left: 16.4%;
+		}
+		.link {
+			color: #fff;
+			text-decoration: none;
+			margin-left: 10%;
+			font-size: 22px;
+			font-weight: lighter;
+			padding: 10px;
+			&:last-child {
+				border-bottom: 1px solid #fff;
+				line-height: 40px;
+			}
+		}
+		.bottom-line {
+			position: relative;
+			height: 2px;
+			width: 65px;
+			background: #d0aa8c;
+			margin-left: 13%;
+		}
+		ul {
+			display: block;
+			border-right: 1px solid #a4a4a4;
+			box-sizing: border-box;
+		}
+		li {
+			list-style-type: none;
+			margin: 0;
+			padding: 0 15px;
+			a {
+				text-decoration: none;
+				color: #a4a4a4;
+				transition: all 0.2s;
+				&:hover {
+					color: @light;
+				}
+			}
+		}
+		.social {
+			margin-top: 20px;
+			margin-left: 10%;
+			width: 60%;
+			height: 100px;
+			display: block;
+			text-align: center;
+			line-height: 0;
+			span {
+				color: #a4a4a4;
+			}
+		}
+		.social2 {
+			position: absolute;
+			background: #a4a4a4;
+			opacity: 0.3;
+			width: 10%;
+			height: 100px;
+			p {
+				color: #fff;
+			}
+		}
+		.icons {
+			position: absolute;
+			display: flex;
+			margin-top: 165px;
+			margin-left: 2.2%;
+			img {
+				width: 32px;
+				height: 22px;
+				padding: 0 5px;
+				cursor: pointer;
+			}
+		} 
+	}
+}
+
+@media (max-width: 1024px) {
+	.top-line {
+		 display: none;
+	}
+	.btn-group {
+		display: none;
+	}
+	.header {
+		.logo {
+			order: -2;
+			margin-top: 10px;
+		}
+		.menu {
+			height: auto;
+		}
+		
+	}
+	
 }
