--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ body {
 /*подвал*/
 .foot-cont {
   background: url(/img/bg.png) no-repeat;
-  background-size: 100% auto;
+  background-size: 100% 100%;
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -251,6 +251,39 @@ body {
   padding: 0 5px;
   cursor: pointer;
 }
+@media (max-width: 375px) {
+  .foot-cont {
+    flex-direction: column;
+  }
+  .foot-cont .cont-item:last-child {
+    width: 77%;
+  }
+  .foot-cont .cont-item:last-child .social {
+    width: 50%;
+  }
+  .foot-cont .cont-item:last-child .social2 {
+    width: 38%;
+  }
+  .foot-cont .cont-item:last-child .icons {
+    margin-top: 75px;
+    margin-left: 10%;
+  }
+}
+@media (max-width: 991px) {
+  .header .menu ul li {
+    border-right: none;
+  }
+  .header .menu ul li a {
+    padding: 10px;
+  }
+  .foot-cont .cont-item {
+    width: 100%;
+    justify-content: space-around;
+  }
+  .foot-cont .cont-item:first-child {
+    margin-left: 0;
+  }
+}
 @media (max-width: 1024px) {
   .top-line {
     display: none;
@@ -264,5 +297,15 @@ body {
   }
   .header .menu {
     height: auto;
+  }
+  .header .menu ul li a {
+    padding-right: 20px;
+  }
+  .foot-cont .cont-item {
+    width: 100%;
+    justify-content: space-around;
+  }
+  .foot-cont .cont-item:first-child {
+    margin-left: 0;
   }
 }
