--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,16 @@ body {
   padding: 0;
 }
 .top-line {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-top: 21px;
   margin-left: 13%;
   width: 68%;
 }
 .top-line .line {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
   height: 1px;
@@ -29,31 +33,53 @@ body {
   background: #000000;
 }
 .header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .header-top {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-left: 20%;
   width: 60%;
 }
-.header .phone {
+.header .phone-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.header .phone-group .phone {
   line-height: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 .header .logo {
   margin-top: -10px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 .header .logo img {
   margin-left: 5%;
-  width: 82%;
+  width: 100%;
 }
 .header .btn-group .button {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 5px 30px;
   margin-left: 10px;
   background: transparent;
@@ -63,6 +89,7 @@ body {
   cursor: pointer;
   font-size: 12px;
   font-weight: 600;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 .header .btn-group .button:hover {
@@ -71,17 +98,27 @@ body {
   border: 1px solid #d0aa8c;
 }
 .header .menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 100%;
   height: 50px;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background: #302d35;
   margin-top: 15px;
 }
 .header .menu ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin: 0;
   padding: 0;
   text-align: center;
@@ -103,6 +140,9 @@ body {
 }
 .header .menu ul li:last-child {
   border-right: none;
+}
+.header .navbar-toggler {
+  background: #ffffff;
 }
 /*конец меню*/
 /*текст*/
@@ -126,7 +166,8 @@ body {
   height: 1px;
   width: 65px;
   background: #d0aa8c;
-  transform: translate(-120%, 15px);
+  -webkit-transform: translate(-120%, 15px);
+          transform: translate(-120%, 15px);
 }
 .block-text h2::after {
   content: '';
@@ -134,7 +175,8 @@ body {
   height: 1px;
   width: 65px;
   background: #d0aa8c;
-  transform: translate(23%, 15px);
+  -webkit-transform: translate(23%, 15px);
+          transform: translate(23%, 15px);
 }
 .block-text p {
   font-size: 12px;
@@ -151,7 +193,8 @@ body {
   max-width: 90px;
 }
 .row .col-md-6 .button-content {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 5px 30px;
   border: 2px solid #302d35;
   text-transform: uppercase;
@@ -163,18 +206,30 @@ body {
 }
 /*подвал*/
 .foot-cont {
-  background: url(/img/bg.png) no-repeat;
+  background: url(../img/bg.png) no-repeat;
   background-size: 100% 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
   width: 100%;
   margin-bottom: 100px;
 }
 .foot-cont .cont-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  width: 16%;
-  justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 250px;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   margin-top: 30px;
 }
 .foot-cont .cont-item:first-child {
@@ -202,7 +257,8 @@ body {
 .foot-cont .cont-item ul {
   display: block;
   border-right: 1px solid #a4a4a4;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 .foot-cont .cont-item li {
   list-style-type: none;
@@ -212,6 +268,7 @@ body {
 .foot-cont .cont-item li a {
   text-decoration: none;
   color: #a4a4a4;
+  -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
 .foot-cont .cont-item li a:hover {
@@ -241,6 +298,8 @@ body {
 }
 .foot-cont .cont-item .icons {
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-top: 165px;
   margin-left: 2.2%;
@@ -253,10 +312,10 @@ body {
 }
 @media (max-width: 375px) {
   .foot-cont {
-    flex-direction: column;
-  }
-  .foot-cont .cont-item:last-child {
-    width: 77%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .foot-cont .cont-item:last-child .social {
     width: 50%;
@@ -269,6 +328,34 @@ body {
     margin-left: 10%;
   }
 }
+@media (max-width: 420px) {
+  .header .header-top {
+    margin-left: 0;
+    width: 85%;
+  }
+  .header .header-top .phone-group {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+    padding-top: 10px;
+  }
+  .foot-cont .cont-item {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+@media (max-width: 768px) {
+  .header .header-top {
+    margin-left: 0;
+    width: 85%;
+  }
+  .foot-cont .cont-item {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
 @media (max-width: 991px) {
   .header .menu ul li {
     border-right: none;
@@ -277,8 +364,8 @@ body {
     padding: 10px;
   }
   .foot-cont .cont-item {
-    width: 100%;
-    justify-content: space-around;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
   }
   .foot-cont .cont-item:first-child {
     margin-left: 0;
@@ -292,7 +379,9 @@ body {
     display: none;
   }
   .header .logo {
-    order: -2;
+    -webkit-box-ordinal-group: -1;
+        -ms-flex-order: -2;
+            order: -2;
     margin-top: 10px;
   }
   .header .menu {
@@ -302,8 +391,8 @@ body {
     padding-right: 20px;
   }
   .foot-cont .cont-item {
-    width: 100%;
-    justify-content: space-around;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
   }
   .foot-cont .cont-item:first-child {
     margin-left: 0;
