--- a/less/style.less
+++ b/less/style.less
@@ -43,16 +43,19 @@ body {
 		margin-left: 20%;
 		width: 60%;
 	}
-	.phone {
-		line-height: 0;
-		box-sizing: border-box;
+	.phone-group {
+		display: flex;
+		.phone {
+			line-height: 0;
+			box-sizing: border-box;
+		}
 	}
 	.logo {
 		margin-top: -10px;
 		box-sizing: border-box;
 		img {
 			margin-left: 5%;
-			width: 82%;
+			width: 100%;
 		}
 	}
 	.btn-group {
@@ -109,6 +112,9 @@ body {
 				}
 			}
 		}
+	}
+	.navbar-toggler {
+		background: @light;
 	}
 }
 /*конец меню*/
@@ -180,16 +186,16 @@ body {
 /*подвал*/
 
 .foot-cont {
-	background: url(/img/bg.png) no-repeat;
+	background: url(../img/bg.png) no-repeat;
 	background-size: 100% 100%;
 	display: flex;
-	flex-direction: row;
+	flex-flow: row wrap;
 	width: 100%;
 	margin-bottom: 100px;
 	.cont-item {
 		display: flex;
 		flex-direction: column;
-		width: 16%;
+		width: 250px;
 		justify-content: flex-start;
 		margin-top: 30px;
 		&:first-child {
@@ -273,7 +279,6 @@ body {
 		flex-direction: column;
 		.cont-item {
 			&:last-child {
-				width: 77%;
 				.social {
 					width: 50%;
 				}
@@ -288,6 +293,37 @@ body {
 		}
 	}
 }
+@media (max-width: 420px) {
+	.header {
+		.header-top {
+			margin-left: 0;
+			width: 85%;
+			.phone-group {
+				flex-direction: column;
+				width: 100%;
+				padding-top: 10px;
+			}
+		}
+	}
+	.foot-cont {
+		.cont-item {
+			justify-content: space-around;
+		}
+	}
+	}
+@media (max-width: 768px) {
+	.header {
+		.header-top {
+			margin-left: 0;
+			width: 85%;
+		}
+	}
+	.foot-cont {
+		.cont-item {
+			justify-content: space-around;
+		}
+	}
+	}
 
 @media (max-width: 991px) {
 	.header {
@@ -304,7 +340,6 @@ body {
 	}
 	.foot-cont {
 		.cont-item {
-			width: 100%;
 			justify-content: space-around;
 			&:first-child {
 				margin-left: 0;
@@ -339,7 +374,6 @@ body {
 	}
 	.foot-cont {
 		.cont-item {
-			width: 100%;
 			justify-content: space-around;
 			&:first-child {
 				margin-left: 0;
