--- a/css/style.css
+++ b/css/style.css
@@ -2,95 +2,93 @@
 /*верхние линии*/
 /*ховер кнопок*/
 /*меню*/
-/*fonts family*/
-@font-face {
-  font-family: 'Montserrat', sans-serif;
-  src: url(../fonts/Montserrat-Medium.ttf);
+.wrapper {
+  width: 100%;
+  max-width: 1230px;
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
+/*fonts*/
 @font-face {
   font-family: 'Romul';
   src: url(../fonts/Romul.ttf);
 }
 body {
   margin: 0;
-  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+}
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
 }
 .top-line {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin-top: 21px;
   margin-left: 13%;
   width: 68%;
 }
 .top-line .line {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100%;
   height: 1px;
   margin-left: 8%;
-  background: #000000;
+  background: #000;
 }
 .header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
-.header-top {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
+.header .wrapper {
   display: inline-flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-left: 20%;
-  width: 60%;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 .header .phone-group {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
+  margin-top: 20px;
 }
-.header .phone-group .phone {
-  line-height: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+.header .phone-group__phone {
   margin-right: 20px;
+  text-decoration: none;
+  color: #000;
+  font-weight: 700;
+}
+.header .phone-group__phone span {
+  font-weight: 100;
+  font-size: 14px;
+  color: #d0aa8c;
+}
+.header .phone-group__phone__line {
+  display: block;
+  position: absolute;
+  width: 2%;
+  height: 1px;
+  background-color: #d0aa8c;
+  top: 17%;
+  margin-left: 10px;
+  transform: translateX(350%);
 }
 .header .logo {
   margin-top: -10px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 .header .logo img {
   width: 100%;
 }
 .header .btn-group .button {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   padding: 5px 30px;
   margin-left: 10px;
   background: transparent;
-  outline: none;
-  border: 1px solid #000000;
+  border: 1px solid #000;
   text-transform: uppercase;
-  cursor: pointer;
+  text-decoration: none;
   font-size: 12px;
-  font-weight: 600;
-  -webkit-transition: 0.5s;
+  font-weight: 300;
   transition: 0.5s;
+  color: #000;
 }
 .header .btn-group .button:hover {
   background: #d0aa8c;
@@ -98,54 +96,43 @@ body {
   border: 1px solid #d0aa8c;
 }
 .header .menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   width: 100%;
   height: 50px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   background: #302d35;
   margin-top: 15px;
 }
-.header .menu ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.header .menu .wrapper ul {
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   margin: 0;
   padding: 0;
   text-align: center;
-  margin-left: 20%;
-  width: 60%;
+  width: 100%;
 }
-.header .menu ul li {
+.header .menu .wrapper ul li {
   list-style: none;
-  border-right: 1px solid #ffffff;
+  border-right: 1px solid #fff;
 }
-.header .menu ul li a {
+.header .menu .wrapper ul li a {
   display: block;
-  color: #ffffff;
+  color: #fff;
   text-decoration: none;
   text-transform: uppercase;
   padding-right: 50px;
-  font-size: 12px;
+  font-size: 14px;
   font-family: 'Romul';
 }
-.header .menu ul li a:hover {
-  color: #e6e6e6;
+.header .menu .wrapper ul li a:hover {
+  color: #d0aa8c;
 }
-.header .menu ul li:last-child {
+.header .menu .wrapper ul li:last-child {
   border-right: none;
 }
 .header .navbar-toggler {
-  background: #ffffff;
+  background: #fff;
 }
 /*конец меню*/
 /*хлебные крошки*/
@@ -165,9 +152,6 @@ body {
   color: #d0aa8c;
 }
 /*текст*/
-.block-text {
-  margin-top: 45px;
-}
 .block-text h1 {
   text-transform: uppercase;
   font-family: 'Montserrat', sans-serif;
@@ -185,8 +169,7 @@ body {
   height: 1px;
   width: 65px;
   background: #d0aa8c;
-  -webkit-transform: translate(-120%, 15px);
-          transform: translate(-120%, 15px);
+  transform: translate(-120%, 15px);
 }
 .block-text h2::after {
   content: '';
@@ -194,19 +177,21 @@ body {
   height: 1px;
   width: 65px;
   background: #d0aa8c;
-  -webkit-transform: translate(23%, 15px);
-          transform: translate(23%, 15px);
+  transform: translate(23%, 15px);
 }
 .block-text p {
   font-size: 12px;
-  font-weight: 600;
+  font-weight: 400;
 }
 /*контент*/
-.row .col-md-6 .container-link {
+.row .col-md-6 {
   color: #000;
-  text-decoration: none;
 }
-.row .col-md-6 .container-link .header-text .line {
+.row .col-md-6 .header-text {
+  position: relative;
+  height: 400px;
+}
+.row .col-md-6 .header-text .line {
   background: #d0aa8c;
   margin-left: auto;
   margin-right: auto;
@@ -215,17 +200,21 @@ body {
   height: 1px;
   max-width: 90px;
 }
-.row .col-md-6 .container-link .button-content {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 5px 30px;
+.row .col-md-6 .btn-link .button-content {
+  padding: 10px 40px;
   border: 2px solid #302d35;
   text-transform: uppercase;
-  width: 50%;
+  text-decoration: none !important;
   background: transparent;
-  cursor: pointer;
   font-weight: 400;
   margin-bottom: 30px;
+  transition: 0.5s;
+  color: #000;
+}
+.row .col-md-6 .btn-link .button-content:hover {
+  background-color: #d0aa8c;
+  color: #fff;
+  border-color: transparent;
 }
 /*подвал*/
 .foot-cont {
@@ -235,13 +224,8 @@ body {
   margin-bottom: 100px;
 }
 .foot-cont .cont-item {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   margin-top: 30px;
   padding: 0;
 }
@@ -255,24 +239,18 @@ body {
   font-family: serif;
 }
 .foot-cont .cont-item .cont-link {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
+  flex-flow: column;
   width: 60%;
 }
 .foot-cont .cont-item .cont-link .last-link {
-  -webkit-transition: 0.3s;
   transition: 0.3s;
   color: #a4a4a4;
   border-bottom: 2px solid #a4a4a4;
 }
 .foot-cont .cont-item .cont-link .last-link:hover {
-  color: #ffffff;
-  border-bottom: 2px solid #ffffff;
+  color: #fff;
+  border-bottom: 2px solid #fff;
 }
 .foot-cont .cont-item .bottom-line {
   position: relative;
@@ -284,8 +262,7 @@ body {
 .foot-cont .cont-item ul {
   display: block;
   border-right: 1px solid #a4a4a4;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 .foot-cont .cont-item li {
   list-style-type: none;
@@ -295,11 +272,10 @@ body {
 .foot-cont .cont-item li a {
   text-decoration: none;
   color: #a4a4a4;
-  -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
 .foot-cont .cont-item li a:hover {
-  color: #ffffff;
+  color: #fff;
 }
 .foot-cont .cont-item .overlay {
   position: absolute;
@@ -311,35 +287,28 @@ body {
   opacity: 0.4;
 }
 .foot-cont .cont-item .contacts-footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   position: relative;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
   width: 65%;
   height: 100px;
   margin-top: 10px;
   line-height: 14px;
 }
-.foot-cont .cont-item .contacts-footer p {
-  color: #ffffff;
+.foot-cont .cont-item .contacts-footer .phone-footer__phone {
+  padding-left: 30px;
+  color: #fff;
+  text-decoration: none;
 }
-.foot-cont .cont-item .contacts-footer span {
+.foot-cont .cont-item .contacts-footer .phone-footer span {
   color: #a4a4a4;
+  font-size: 10px;
+  padding-left: 80px;
 }
 .foot-cont .cont-item .icons {
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100%;
   text-align: center;
@@ -351,7 +320,6 @@ body {
   padding: 0 5px;
   cursor: pointer;
   color: #ccc;
-  -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 .foot-cont .cont-item .icons a:hover {
@@ -370,10 +338,7 @@ body {
 }
 @media (max-width: 375px) {
   .foot-cont {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .foot-cont .cont-item:last-child .social {
     width: 50%;
@@ -387,21 +352,23 @@ body {
   }
 }
 @media (max-width: 420px) {
-  .header .header-top {
+  .header .wrapper {
+    flex-direction: column;
+  }
+  .header .wrapper .header-top {
     margin-left: 0;
     width: 85%;
   }
-  .header .header-top .phone-group {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+  .header .wrapper .header-top .phone-group {
+    flex-direction: column;
     width: 100%;
     padding-top: 10px;
   }
   .foot-cont .cont-item {
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    justify-content: space-around;
+  }
+  .foot-cont .cont-item .contacts-footer {
+    margin-top: 95px;
   }
 }
 @media (max-width: 768px) {
@@ -409,9 +376,17 @@ body {
     margin-left: 0;
     width: 85%;
   }
+  .header .breadcrumb {
+    padding: 0;
+  }
   .foot-cont .cont-item {
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    justify-content: space-around;
+  }
+  .foot-cont .cont-item .contacts-footer {
+    margin-top: 85px;
+  }
+  .foot-cont .cont-item .contacts-footer .phone-footer span {
+    padding: 0;
   }
 }
 @media (max-width: 991px) {
@@ -422,8 +397,7 @@ body {
     padding: 10px;
   }
   .foot-cont .cont-item {
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    justify-content: space-around;
   }
   .foot-cont .cont-item:first-child {
     margin-left: 0;
@@ -433,13 +407,14 @@ body {
   .top-line {
     display: none;
   }
-  .btn-group {
+  .header .wrapper {
+    flex-direction: column;
+  }
+  .header .wrapper .phone-group__phone__line {
     display: none;
   }
   .header .logo {
-    -webkit-box-ordinal-group: -1;
-        -ms-flex-order: -2;
-            order: -2;
+    order: -2;
     margin-top: 10px;
   }
   .header .menu {
@@ -449,8 +424,7 @@ body {
     padding-right: 20px;
   }
   .foot-cont .cont-item {
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    justify-content: space-around;
   }
   .foot-cont .cont-item:first-child {
     margin-left: 0;
